src/objects/PortalObjectAccess__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>"Read"</defaultValue>
        <inlineHelpText>Read 
Edit</inlineHelpText>
        <label>Shared Account</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>"Read"</defaultValue>
        <inlineHelpText>Read 
Edit</inlineHelpText>
        <label>Shared Account's Case</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <defaultValue>"Read"</defaultValue>
        <inlineHelpText>Read 
Edit</inlineHelpText>
        <label>Shared Account's Contact</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <defaultValue>"Read"</defaultValue>
        <inlineHelpText>Read 
Edit</inlineHelpText>
        <label>Shared Account's Entitlement</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>"Read"</defaultValue>
        <label>Shared Account's Opportunity</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>ProfileName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rank__c</fullName>
        <label>Role Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>PortalObjectAccess</label>
</CustomObject>